<resources>
  <string name="app_name">app_20250806</string>
  <string name="btn_db">데이터베이스 사용하기</string>
  <string name="btn_file">파일 사용하기</string>
  <string name="btn_insert">데이터 추가</string>
  <string name="btn_update">데이터 수정</string>
  <string name="btn_delete">데이터 삭제</string>
  <string name="btn_select_seq">번호 검색</string>
  <string name="btn_select_name">이름 검색</string>
  <string name="btn_select_all">전체 검색</string>
  <string name="label_seq">번호 : </string>
  <string name="label_name">이름 : </string>
  <string name="label_phone">휴대폰 : </string>
  <string name="label_email">이메일 : </string>
  <string name="label_addr">주소 : </string>
  <string name="et_seq_hint">번호를 입력하세요</string>
  <string name="et_name_hint">이름을 입력하세요</string>
  <string name="et_phone_hint">휴대폰 번호를 입력하세요</string>
  <string name="et_email_hint">이메일을 입력하세요</string>
  <string name="et_addr_hint">주소를 입력하세요</string>
  <string name="btn_system_in_file_write">내부 저장소에 파일 쓰기</string>
  <string name="btn_system_in_file_read">내부 저장소에서 파일 읽기</string>
  <string name="btn_system_out_file_write">외부 저장소에 파일 쓰기</string>
  <string name="btn_system_out_file_read">외부 저장소에서 파일 읽기</string>
  <string name="btn_download_file_write">공용 Download 폴더에 파일 쓰기</string>
  <string name="btn_download_file_read">공용 Download 폴더에서 파일 읽기</string>
</resources>