<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="8dp"
  android:id="@+id/main">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center">

    <Button
      android:id="@+id/btn_insert"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/btn_insert"
      style="@style/my_btn_style_db" />

    <Button
      android:id="@+id/btn_update"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/btn_update"
      style="@style/my_btn_style_db" />

    <Button
      android:id="@+id/btn_delete"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/btn_delete"
      style="@style/my_btn_style_db" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center">

    <Button
      android:id="@+id/btn_select_seq"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/btn_select_seq"
      style="@style/my_btn_style_db" />

    <Button
      android:id="@+id/btn_select_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/btn_select_name"
      style="@style/my_btn_style_db" />

    <Button
      android:id="@+id/btn_select_all"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/btn_select_all"
      style="@style/my_btn_style_db" />
  </LinearLayout>

  <View
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:background="#55000000"
    android:layout_marginVertical="16dp" />

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
          android:layout_width="50dp"
          android:layout_height="wrap_content"
          android:text="@string/label_seq" />

        <EditText
          android:id="@+id/et_seq"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/et_seq_hint" />
      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
          android:layout_width="50dp"
          android:layout_height="wrap_content"
          android:text="@string/label_name"/>

        <EditText
          android:id="@+id/et_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/et_name_hint" />
      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
          android:layout_width="50dp"
          android:layout_height="wrap_content"
          android:text="@string/label_phone"/>

        <EditText
          android:id="@+id/et_phone"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/et_phone_hint" />
      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
          android:layout_width="50dp"
          android:layout_height="wrap_content"
          android:text="@string/label_email"/>

        <EditText
          android:id="@+id/et_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/et_email_hint" />
      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
          android:layout_width="50dp"
          android:layout_height="wrap_content"
          android:text="@string/label_addr"/>

        <EditText
          android:id="@+id/et_addr"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/et_addr_hint" />
      </LinearLayout>

      <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#55000000"
        android:layout_marginVertical="8dp"/>

      <EditText
        android:id="@+id/et_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:maxLines="10"
        android:scrollbars="vertical"/>
    </LinearLayout>
  </ScrollView>
</LinearLayout>










