<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:id="@+id/main">

  <Button
    android:id="@+id/btn_system_in_file_write"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/btn_system_in_file_write"
    style="@style/my_btn_style" />

  <Button
    android:id="@+id/btn_system_in_file_read"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/btn_system_in_file_read"
    style="@style/my_btn_style" />

  <Button
    android:id="@+id/btn_system_out_file_write"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/btn_system_out_file_write"
    style="@style/my_btn_style" />

  <Button
    android:id="@+id/btn_system_out_file_read"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/btn_system_out_file_read"
    style="@style/my_btn_style" />

  <Button
    android:id="@+id/btn_download_file_write"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/btn_download_file_write"
    style="@style/my_btn_style" />

  <Button
    android:id="@+id/btn_download_file_read"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/btn_download_file_read"
    style="@style/my_btn_style" />
</LinearLayout>